test connection between 2 apps using internal dns

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -175,6 +175,8 @@ jobs:
         if: ${{ matrix.downgrade == true || matrix.upgrade == true }}
       - name: test
         run: ci/test.sh
+      - name: internal_communication
+        run: ci/inter_communication.sh
       - name: debug
         run: ci/debug.sh
         if: always()
