--- a/examples/httpd/convox.yml
+++ b/examples/httpd/convox.yml
@@ -13,6 +13,6 @@ services:
 
 timers:
   example:
-    command: /usr/scripts/timer-cmd.sh
+    command: /usr/scripts/timer_cmd.sh
     schedule: "* * * * *"
     service: web
