--- a/examples/httpd/convox.yml
+++ b/examples/httpd/convox.yml
@@ -16,3 +16,13 @@ timers:
     command: /usr/scripts/timer_cmd.sh
     schedule: "* * * * *"
     service: web
+  concurrencyallowed:
+    command: /usr/scripts/timer_long_cmd.sh
+    schedule: "* * * * *"
+    service: web
+    concurrencyPolicy: Allow
+  concurrencyforbid:
+    command: /usr/scripts/timer_long_cmd.sh
+    schedule: "* * * * *"
+    service: web
+    concurrencyPolicy: Forbid
