--- a/examples/httpd/convox.yml
+++ b/examples/httpd/convox.yml
@@ -3,6 +3,16 @@ resources:
     type: postgres
   rediscache:
     type: redis
+  memcache:
+    type: memcached
+    options:
+      version: 1.6.17
+  mysqldb:
+    type: mysql
+    options:
+      version: 8.0.30
+  mariadb:
+    type: mariadb
 services:
   web:
     build: .
@@ -10,7 +20,9 @@ services:
     resources:
       - postgresdb:DB_URL
       - rediscache:REDIS_URL
-
+      - memcache:MEMCACHE_URL
+      - mysqldb:MYSQL_URL
+      - mariadb:MARIA_URL
 timers:
   example:
     command: /usr/scripts/timer_cmd.sh
