Configurable concurrency for timers (#484)
* add concurrencyPolicy on convox manifest

* fix unit test

* docs for the new timer attribute ConcurrencyPolicy

* solve deepsource issue: Function params involve heavy amount of copying

* add e2e tests for concurrency

* replace property name justo concurrency

* rollback doc change

* fix e2e test

* clarify default value in the doc

* Fix deepsource issue: strings.Title deprecation

--- a/examples/httpd/convox.yml
+++ b/examples/httpd/convox.yml
@@ -28,3 +28,13 @@ timers:
     command: /usr/scripts/timer_cmd.sh
     schedule: "* * * * *"
     service: web
+  concurrencyallowed:
+    command: /usr/scripts/timer_long_cmd.sh
+    schedule: "* * * * *"
+    service: web
+    concurrency: allow
+  concurrencyforbid:
+    command: /usr/scripts/timer_long_cmd.sh
+    schedule: "* * * * *"
+    service: web
+    concurrency: forbid
