Try to fix build jobs

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    outputs:
+      upload_url: ${{ steps.release.outputs.upload_url }}
     steps:
       - name: checkout
         uses: actions/checkout@v3
@@ -43,6 +45,10 @@ jobs:
         run: make -C cmd/convox build
         env:
           IMAGE: ${{ github.repository }}
+  build-amd64:
+    needs: release
+    runs-on: ubuntu-latest
+    steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
@@ -52,78 +58,87 @@ jobs:
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-  build-amd64:
-    needs: release
-    runs-on: ubuntu-latest
-    steps:
       - name: build-amd64
         run: "docker buildx build --platform linux/amd64 -t ${{ github.repository }}:${{ env.VERSION }} --push --cache-from type=registry,ref=${{ github.repository }} --cache-to type=registry,ref=${{ github.repository }},mode=max ."
   build-arm64:
     needs: release
     runs-on: ubuntu-latest
     steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: login
+        run: docker login --username "${DOCKER_USERNAME}" --password "${DOCKER_PASSWORD}"
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       - name: build-arm64
         run: "docker buildx build --platform linux/arm64 -t ${{ github.repository }}:${{ env.VERSION }}-arm64 --push --cache-from type=registry,ref=${{ github.repository }} --cache-to type=registry,ref=${{ github.repository }},mode=max --build-arg DOCKER_ARCH=aarch64 --build-arg KUBECTL_ARCH=arm64 ."
-  # release-cli-linux:
-  #   needs:
-  #     - build-amd64
-  #     - build-arm64
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     env:
-  #       GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-  #     name: release-cli-linux
-  #     uses: actions/upload-release-asset@v1.0.2
-  #     with:
-  #       asset_content_type: application/octet-stream
-  #       asset_name: convox-linux
-  #       asset_path: ./cmd/convox/pkg/convox-linux-amd64
-  #       upload_url: "${{ steps.release.outputs.upload_url }}"
-  # release-cli-linux-arm64:
-  #   needs:
-  #     - build-amd64
-  #     - build-arm64
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: release-cli-linux-arm64
-  #       env:
-  #         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-  #       uses: actions/upload-release-asset@v1.0.2
-  #       with:
-  #         asset_content_type: application/octet-stream
-  #         asset_name: convox-linux-arm64
-  #         asset_path: ./cmd/convox/pkg/convox-linux-arm64
-  #         upload_url: "${{ steps.release.outputs.upload_url }}"
-  # release-cli-macos:
-  #   needs:
-  #     - build-amd64
-  #     - build-arm64
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: release-cli-macos
-  #       env:
-  #         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-  #       uses: actions/upload-release-asset@v1.0.2
-  #       with:
-  #         asset_content_type: application/octet-stream
-  #         asset_name: convox-macos
-  #         asset_path: ./cmd/convox/pkg/convox-darwin-10.16-amd64
-  #         upload_url: "${{ steps.release.outputs.upload_url }}"
-  # release-cli-macos-arm64:
-  #   needs:
-  #     - build-amd64
-  #     - build-arm64
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: release-cli-macos-arm64
-  #       env:
-  #         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-  #       uses: actions/upload-release-asset@v1.0.2
-  #       with:
-  #         asset_content_type: application/octet-stream
-  #         asset_name: convox-macos-arm64
-  #         asset_path: ./cmd/convox/pkg/convox-darwin-arm64
-  #         upload_url: "${{ steps.release.outputs.upload_url }}"
+  release-cli-linux:
+    needs:
+      - release
+      - build-amd64
+      - build-arm64
+    runs-on: ubuntu-latest
+    steps:
+      env:
+        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      name: release-cli-linux
+      uses: actions/upload-release-asset@v1.0.2
+      with:
+        asset_content_type: application/octet-stream
+        asset_name: convox-linux
+        asset_path: ./cmd/convox/pkg/convox-linux-amd64
+        upload_url: "${{ needs.release.outputs.upload_url }}"
+  release-cli-linux-arm64:
+    needs:
+      - release
+      - build-amd64
+      - build-arm64
+    runs-on: ubuntu-latest
+    steps:
+      - name: release-cli-linux-arm64
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        uses: actions/upload-release-asset@v1.0.2
+        with:
+          asset_content_type: application/octet-stream
+          asset_name: convox-linux-arm64
+          asset_path: ./cmd/convox/pkg/convox-linux-arm64
+          upload_url: "${{ needs.release.outputs.upload_url }}"
+  release-cli-macos:
+    needs:
+      - release
+      - build-amd64
+      - build-arm64
+    runs-on: ubuntu-latest
+    steps:
+      - name: release-cli-macos
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        uses: actions/upload-release-asset@v1.0.2
+        with:
+          asset_content_type: application/octet-stream
+          asset_name: convox-macos
+          asset_path: ./cmd/convox/pkg/convox-darwin-10.16-amd64
+          upload_url: "${{ needs.release.outputs.upload_url }}"
+  release-cli-macos-arm64:
+    needs:
+      - release
+      - build-amd64
+      - build-arm64
+    runs-on: ubuntu-latest
+    steps:
+      - name: release-cli-macos-arm64
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        uses: actions/upload-release-asset@v1.0.2
+        with:
+          asset_content_type: application/octet-stream
+          asset_name: convox-macos-arm64
+          asset_path: ./cmd/convox/pkg/convox-darwin-arm64
+          upload_url: "${{ needs.release.outputs.upload_url }}"
   # ci:
   #   if: github.repository == 'convox/convox'
   #   needs:
