--- a/provider/k8s/testdata/release-basic.yml
+++ b/provider/k8s/testdata/release-basic.yml
@@ -29,6 +29,7 @@ manifest:
         - two:OTHER_URL
         - three
         - four
+      whitelist: 127.0.0.0/32
     web2:
       build: .
       port: 5000
