--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,26 @@ jobs:
         run: make -C cmd/convox build
         env:
           IMAGE: ${{ github.repository }}
+      - name: upload-convox-linux-amd64
+        uses: actions/upload-artifact@v2
+        with:
+          name: convox-linux-amd64
+          path: ./cmd/convox/pkg/convox-linux-amd64
+      - name: upload-convox-linux-arm64
+        uses: actions/upload-artifact@v2
+        with:
+          name: convox-linux-arm64
+          path: ./cmd/convox/pkg/convox-linux-arm64
+      - name: upload-convox-darwin-10.16-amd64
+        uses: actions/upload-artifact@v2
+        with:
+          name: convox-darwin-10.16-amd64
+          path: ./cmd/convox/pkg/convox-darwin-10.16-amd64
+      - name: upload-convox-darwin-arm64
+        uses: actions/upload-artifact@v2
+        with:
+          name: convox-convox-darwin-arm64
+          path: ./cmd/convox/pkg/convox-darwin-arm64
   build-amd64:
     needs: release
     runs-on: ubuntu-latest
@@ -98,6 +118,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - uses: actions/download-artifact@v2
+        with:
+          name: convox-linux-amd64
       - name: release
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
@@ -105,7 +128,7 @@ jobs:
         with:
           asset_content_type: application/octet-stream
           asset_name: convox-linux
-          asset_path: ./cmd/convox/pkg/convox-linux-amd64
+          asset_path: ./convox-linux-amd64
           upload_url: "${{ needs.release.outputs.upload_url }}"
   release-cli-linux-arm64:
     needs:
@@ -118,6 +141,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - uses: actions/download-artifact@v2
+        with:
+          name: convox-linux-arm64
       - name: release
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
@@ -125,7 +151,7 @@ jobs:
         with:
           asset_content_type: application/octet-stream
           asset_name: convox-linux-arm64
-          asset_path: ./cmd/convox/pkg/convox-linux-arm64
+          asset_path: ./convox-linux-arm64
           upload_url: "${{ needs.release.outputs.upload_url }}"
   release-cli-macos:
     needs:
@@ -138,6 +164,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - uses: actions/download-artifact@v2
+        with:
+          name: convox-darwin-10.16-amd64
       - name: release
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
@@ -145,7 +174,7 @@ jobs:
         with:
           asset_content_type: application/octet-stream
           asset_name: convox-macos
-          asset_path: ./cmd/convox/pkg/convox-darwin-10.16-amd64
+          asset_path: ./convox-darwin-10.16-amd64
           upload_url: "${{ needs.release.outputs.upload_url }}"
   release-cli-macos-arm64:
     needs:
@@ -158,6 +187,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - uses: actions/download-artifact@v2
+        with:
+          name: convox-darwin-arm64
       - name: release
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
@@ -165,7 +197,7 @@ jobs:
         with:
           asset_content_type: application/octet-stream
           asset_name: convox-macos-arm64
-          asset_path: ./cmd/convox/pkg/convox-darwin-arm64
+          asset_path: ./convox-darwin-arm64
           upload_url: "${{ needs.release.outputs.upload_url }}"
   ci:
     if: github.repository == 'convox/convox'
