--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -166,7 +166,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/download-artifact@v2
         with:
-          name: convox-darwin-10.16-amd64
+          name: convox-macos
       - name: release
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
@@ -189,7 +189,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/download-artifact@v2
         with:
-          name: convox-darwin-arm64
+          name: convox-macos-arm64
       - name: release
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
