--- a/provider/k8s/testdata/release-basic-app.yml
+++ b/provider/k8s/testdata/release-basic-app.yml
@@ -139,12 +139,12 @@ spec:
 ---
 apiVersion: v1
 data:
-  URL: postgres://app:6630abdb8bba553e3e48555e302e51@resource-four.rack1-app1.svc.cluster.local:5432/app?sslmode=disable
-  USER: "app"
-  PASS: "6630abdb8bba553e3e48555e302e51"
-  HOST: "resource-four.rack1-app1.svc.cluster.local"
+  HOST: resource-four.rack1-app1.svc.cluster.local
+  NAME: app
+  PASS: 6630abdb8bba553e3e48555e302e51
   PORT: "5432"
-  NAME: "app"
+  URL: postgres://app:6630abdb8bba553e3e48555e302e51@resource-four.rack1-app1.svc.cluster.local:5432/app?sslmode=disable
+  USER: app
 kind: ConfigMap
 metadata:
   labels:
@@ -259,12 +259,12 @@ spec:
 ---
 apiVersion: v1
 data:
-  URL: postgres://app:6630abdb8bba553e3e48555e302e51@resource-one.rack1-app1.svc.cluster.local:5432/app?sslmode=disable
-  USER: "app"
-  PASS: "6630abdb8bba553e3e48555e302e51"
-  HOST: "resource-one.rack1-app1.svc.cluster.local"
+  HOST: resource-one.rack1-app1.svc.cluster.local
+  NAME: app
+  PASS: 6630abdb8bba553e3e48555e302e51
   PORT: "5432"
-  NAME: "app"
+  URL: postgres://app:6630abdb8bba553e3e48555e302e51@resource-one.rack1-app1.svc.cluster.local:5432/app?sslmode=disable
+  USER: app
 kind: ConfigMap
 metadata:
   labels:
@@ -379,7 +379,12 @@ spec:
 ---
 apiVersion: v1
 data:
+  HOST: ""
+  NAME: ""
+  PASS: ""
+  PORT: ""
   URL: value
+  USER: ""
 kind: ConfigMap
 metadata:
   labels:
@@ -395,12 +400,12 @@ metadata:
 ---
 apiVersion: v1
 data:
+  HOST: resource-two.rack1-app1.svc.cluster.local
+  NAME: app
+  PASS: 6630abdb8bba553e3e48555e302e51
+  PORT: "3306"
   URL: mysql://root:6630abdb8bba553e3e48555e302e51@resource-two.rack1-app1.svc.cluster.local:3306/app
-  USER: "app"
-  PASS: "6630abdb8bba553e3e48555e302e51"
-  HOST: "resource-two.rack1-app1.svc.cluster.local"
-  PORT: "5432"
-  NAME: "app"
+  USER: root
 kind: ConfigMap
 metadata:
   labels:
