--- a/examples/httpd/convox.yml
+++ b/examples/httpd/convox.yml
@@ -1,4 +1,6 @@
 resources:
+  one:
+    type: postgres
   postgresdb:
     type: postgres
   rediscache:
@@ -23,6 +25,7 @@ services:
       - memcache:MEMCACHE_URL
       - mysqldb:MYSQL_URL
       - mariadb:MARIA_URL
+      - one
 timers:
   example:
     command: /usr/scripts/timer_cmd.sh
