Fix ubuntu version

--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -1,9 +1,5 @@
 name: cleanup_aws
 
-env:
-  VERSION: 3.5.3  # @TODO: Automate to get the latest stable tag: https://bit.ly/3krkRNN
-                  # NOTE: convox update is run below so test are run on latest release
-
 on:
   schedule:
     - cron:  '0 2/24 * * *'
@@ -11,7 +7,7 @@ on:
 
 jobs:
   test-clouds:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
       matrix:
